--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <script type="text/javascript" async="" src="./成本核算_files/tag.js.下载"></script></head>
 <body>
 <div>
-    <p style="text-align: center;font-size: 32px;color: red;font-weight: bold;">恒运专用</p>
+    <p style="text-align: center;font-size: 32px;color: red;font-weight: bold;">Hao_o.O?!</p>
 
     <div style="height: 850px;width:100%; color: #9e231b;display: flex"></div>
     <div style="height: 100px;display: flex;padding: 20px">
